# afb-libglue

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: glue-afb.c.A68319496C53C0A4.idx  glue-afb.h.434387D005FFC6E4.idx  glue-utils.h.5CE5ABFD7B54CC46.idx  utils-glue.c.504B850B3D7A5F39.idx
conf.d/cmake/: 00-debian-config.cmake  00-opensuse-config.cmake  config.cmake
conf.d/project/etc/: oidc-local.json  oidc-oauth2.json
src/: CMakeLists.txt  glue-afb.c  glue-afb.h  glue-utils.h  libafb-glue.pc.in  utils-glue.c
